# mcfunction-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  new_nbtdoc_syntax.md
crates/data/: Cargo.toml  README.md
crates/data/src/: datapack.rs  lib.rs  manager.rs  reports.rs
crates/db/: Cargo.toml  README.md
crates/db/src/: files.rs  lib.rs
crates/lsp_server/: Cargo.toml
crates/lsp_server/src/: datapack.rs  lib.rs  manager.rs  reports.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: lib.rs  value.rs
crates/nbtdoc/: Cargo.toml
crates/nbtdoc/src/: lib.rs  modules.rs
crates/nbtdoc/src/syntax/: cst.rs  grammar.rs  group.rs  lexer.rs  mod.rs  testing.rs  tokens.rs
crates/nbtdoc/src/syntax/snapshots/: mcfunction_nbtdoc__syntax__lexer__tests__digits.snap  mcfunction_nbtdoc__syntax__lexer__tests__float.snap  mcfunction_nbtdoc__syntax__lexer__tests__float_exp.snap  mcfunction_nbtdoc__syntax__lexer__tests__group_complex.snap  mcfunction_nbtdoc__syntax__lexer__tests__group_nested.snap  mcfunction_nbtdoc__syntax__lexer__tests__ident.snap  mcfunction_nbtdoc__syntax__lexer__tests__integer.snap  mcfunction_nbtdoc__syntax__lexer__tests__invalid_char.snap  mcfunction_nbtdoc__syntax__lexer__tests__keywords.snap  mcfunction_nbtdoc__syntax__lexer__tests__lit_string_escapes.snap  mcfunction_nbtdoc__syntax__lexer__tests__misc_punct.snap  mcfunction_nbtdoc__syntax__lexer__tests__multi_top.snap  mcfunction_nbtdoc__syntax__lexer__tests__newline_test.snap  mcfunction_nbtdoc__syntax__lexer__tests__not_keyword.snap  mcfunction_nbtdoc__syntax__lexer__tests__punct_single.snap  mcfunction_nbtdoc__syntax__lexer__tests__quoted_string.snap  mcfunction_nbtdoc__syntax__lexer__tests__single_cr_linebreak.snap  mcfunction_nbtdoc__syntax__lexer__tests__unclosed_string.snap  mcfunction_nbtdoc__syntax__lexer__tests__unclosed_string_newline.snap  mcfunction_nbtdoc__syntax__lexer__tests__whitespace.snap
crates/parse/: Cargo.toml
crates/parse/src/: ast.rs  dropbomb.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  syntax.rs  testing.rs
crates/parse/src/grammar/: block.rs  coord.rs  json.rs  mod.rs  nbt.rs  selector.rs  util.rs
crates/parse/src/grammar/snapshots/: mcfunction_parse__grammar__coord__tests__absolute_float.snap  mcfunction_parse__grammar__coord__tests__all_absolute.snap  mcfunction_parse__grammar__coord__tests__all_relative.snap  mcfunction_parse__grammar__coord__tests__bad_whitespace.snap  mcfunction_parse__grammar__coord__tests__mixed_mod.snap  mcfunction_parse__grammar__coord__tests__relative_empty.snap  mcfunction_parse__grammar__coord__tests__two_parts.snap  mcfunction_parse__grammar__json__tests__array_empty.snap  mcfunction_parse__grammar__json__tests__array_nocomma.snap  mcfunction_parse__grammar__json__tests__array_noval.snap  mcfunction_parse__grammar__json__tests__array_simple.snap  mcfunction_parse__grammar__json__tests__array_unclosed.snap  mcfunction_parse__grammar__json__tests__boolean_false.snap  mcfunction_parse__grammar__json__tests__boolean_true.snap  mcfunction_parse__grammar__json__tests__null.snap  mcfunction_parse__grammar__json__tests__object_empty.snap  mcfunction_parse__grammar__json__tests__object_multi.snap  mcfunction_parse__grammar__json__tests__object_nocolon.snap  mcfunction_parse__grammar__json__tests__object_nokey.snap  mcfunction_parse__grammar__json__tests__object_nokey_unclosed.snap  mcfunction_parse__grammar__json__tests__object_simple.snap  mcfunction_parse__grammar__json__tests__string.snap  mcfunction_parse__grammar__nbt__tests__array_empty.snap  mcfunction_parse__grammar__nbt__tests__array_simple.snap  mcfunction_parse__grammar__nbt__tests__boolean_false.snap  mcfunction_parse__grammar__nbt__tests__boolean_true.snap  mcfunction_parse__grammar__nbt__tests__chained_index.snap  mcfunction_parse__grammar__nbt__tests__compound_empty.snap  mcfunction_parse__grammar__nbt__tests__compound_multi.snap  mcfunction_parse__grammar__nbt__tests__compound_nested.snap  mcfunction_parse__grammar__nbt__tests__compound_simple.snap  mcfunction_parse__grammar__nbt__tests__compound_spacing.snap  mcfunction_parse__grammar__nbt__tests__compound_unclosed.snap  mcfunction_parse__grammar__nbt__tests__empty.snap  mcfunction_parse__grammar__nbt__tests__filter.snap  mcfunction_parse__grammar__nbt__tests__float_dash.snap  mcfunction_parse__grammar__nbt__tests__float_no_prec.snap  mcfunction_parse__grammar__nbt__tests__float_no_trail.snap  mcfunction_parse__grammar__nbt__tests__float_only_dot.snap  mcfunction_parse__grammar__nbt__tests__float_plus.snap  (+43 more)
crates/parse/src/mcf/: group.rs  lexer.rs  mod.rs  syntax.rs  testing.rs
crates/parse/src/mcf/grammar/: block.rs  coord.rs  json.rs  nbt.rs  selector.rs  util.rs
crates/parse/src/mcf/snapshots/: mcfunction_parse__mcf__lexer__tests__command_execute.snap  mcfunction_parse__mcf__lexer__tests__digit_literal.snap  mcfunction_parse__mcf__lexer__tests__float.snap  mcfunction_parse__mcf__lexer__tests__group_complex.snap  (+15 more)
crates/parse/src/snapshots/: mcfunction_parse__lexer__tests__command_execute.snap  mcfunction_parse__lexer__tests__digit_literal.snap  mcfunction_parse__lexer__tests__float.snap  mcfunction_parse__lexer__tests__group_complex.snap  mcfunction_parse__lexer__tests__group_nested.snap  mcfunction_parse__lexer__tests__group_simple.snap  mcfunction_parse__lexer__tests__ident.snap  mcfunction_parse__lexer__tests__integer.snap  mcfunction_parse__lexer__tests__lit_string.snap  mcfunction_parse__lexer__tests__lit_string_escapes.snap  mcfunction_parse__lexer__tests__multi_top.snap  mcfunction_parse__lexer__tests__newline_test.snap  mcfunction_parse__lexer__tests__punct_multiple.snap  mcfunction_parse__lexer__tests__punct_single.snap  mcfunction_parse__lexer__tests__single_cr_linebreak.snap  mcfunction_parse__lexer__tests__unclosed_group.snap  mcfunction_parse__lexer__tests__unclosed_string.snap  mcfunction_parse__lexer__tests__unclosed_string_newline.snap  mcfunction_parse__lexer__tests__whitespace.snap
crates/util/: Cargo.toml
crates/util/src/: arena.rs  commands.rs  identifier.rs  lib.rs
src/: lib.rs
(+201 files in other folders)
