[workspace]
members = [
    "crates/parse"
]

[package]
name = "mcfunction"
version = "0.0.1"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yurihaia/mcfunction-rs"
description = "A set of libraries for tools using Minecraft commands"

[features]
default = [ "parse" ]
parse = [ "mcfunction-parse" ]

[dependencies]
mcfunction-parse = { path = "crates/parse", version = "0.0.1", optional = true }