[package]
name = "mcfunction-db"
version = "0.0.1"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yurihaia/mcfunction-rs/tree/master/crates/parse"
description = "Database storage for all Minecraft related information"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relative-path = "1.0.0"
salsa = "0.14.1"
mcfunction-data = { path = "../data", version = "0.0.1" }