[package]
name = "mcfunction-lsp-server"
version = "0.0.1"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yurihaia/mcfunction-rs/tree/master/crates/data"
description = "Language server for Minecraft commands"

[dependencies]
serde = "1.0.104"
serde_json = "1.0.46"
hematite-nbt = "0.4.1"
ra_vfs = "0.5.2"
crossbeam-channel = "0.4.0"
globset = "0.4.4"
lazy_static = "1.4.0"
util = { path = "../util" }

[dev-dependencies]
insta = "0.13.1"