[package]
name = "mcfunction-nbt"
version = "0.0.1"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yurihaia/mcfunction-rs/tree/master/crates/nbt"
description = "Binary NBT parser and utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "snbt" ]
snbt = [
    "mcfunction-mcf",
    "mcfunction-parse"
]

[dependencies]
serde = "1.0.104"
mcfunction-mcf = { path = "../mcf", version = "0.0.1", optional = true }
mcfunction-parse = { path = "../parse", version = "0.0.1", optional = true }