[package]
name = "mcfunction-nbtdoc"
version = "0.0.1"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yurihaia/mcfunction-rs/tree/master/crates/nbtdoc"
description = "NBTDoc utilities for mcfunction-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcfunction-parse = { path = "../parse", version = "0.0.1" }
mcfunction-db = { path = "../db", version = "0.0.1" }
util = { path = "../util", version = "0.0.1" }
relative-path = "1.0.0"
salsa = "0.14.1" # I don't care if its unstable. I really don't want to reimplement this by hand

[dev-dependencies]
insta = "0.13.1"