[package]
name = "mcfunction-parse"
version = "0.0.1"
authors = ["Yurihaia <17830663+Yurihaia@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Yurihaia/mcfunction-rs/tree/master/crates/parse"
description = "Parser framework used throughout mcfunction-rss"

[dependencies]
util = { path = "../util" }

[dev-dependencies]
insta = "0.13.1"